# automotive-tracking

./: .gitignore  README.md  detect_and_track.ipynb  detect_and_track.py  get_files.py  get_files.sh  pyproject.toml
datasets/EU_longterm/: README.md  get_files_EU.sh
datasets/KITTI/: README.md  get_files_KITTI.sh  get_files_KITTI_curl.sh
datasets/nuScenes/: README.md  get_files_nuScenes.py
examples/: KITTI_visualise.ipynb  detect_and_track.ipynb  detect_and_track_YOLO.ipynb
reports/1st_stage/report1/: Raport1_PK.lyx  Raport1_PK.tex  apollo15_10_1_1st_frame_400.eps  frame400.eps  from_yt_2_frame_520.eps  from_yt_3_frame_200.eps  highway_drone_footage_frame_320.eps
reports/1st_stage/report2/: Raport2_PK.lyx  Raport2_PK.tex  from_yt_5_frame_200.eps  from_yt_5_frame_700.eps
reports/2nd_stage/report1/: Raport1_PK.lyx  Raport1_PK.tex
reports/2nd_stage/report1/KITTI_plots/: 3D_lidar.eps  3D_lidar_with_tracklets.eps  just_camera.eps  just_camera_with_tracklets.eps  lidar_top_view.eps  points_per_frame.eps  result_camera_with_lidar_proj_frame_115.eps  result_camera_with_lidar_proj_frame_115_smaller_points  result_camera_with_lidar_proj_frame_115_smaller_points.eps  result_only_camera_frame_115.eps  result_only_camera_frame_115_with_tracklets.eps  velodyne_projection_front.eps
reports/2nd_stage/report2/: AGH.bib  Raport2_PK.lyx  Raport2_PK.tex
scripts/: lidar_conversion.py  prepare_kitti_for_yolo.py  train_yolo_on_kitti.py
src/: KITTI_to_Ultralytics.py  detect_and_track_YOLO.py
utils/: kitti_foundation.py  kitti_util.py  lidar.py  parseTrackletXML.py
